src/test/deca/context/invalid/test_error_1.3-2.deca
// Description:
//    Soulève l'erreur (1.3)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : Identifier 'A' déjà déclaré (règle 1.3)
//
// Historique:
//      cree le 06/01/2022


class A {
}

class A {
}

{
}

